Bump dependencies, require JDK8